--- a/Dropseed.minions.Test/Dropseed.minions.Test.csproj
+++ b/Dropseed.minions.Test/Dropseed.minions.Test.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MinionSettingTests.cs" />
     <Compile Include="PingServiceShouldWorkTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
