--- a/Dropseed.minions.Api/Dropseed.minions.Api.csproj
+++ b/Dropseed.minions.Api/Dropseed.minions.Api.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MinionSettings.cs" />
     <Compile Include="PingController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartUp.cs" />
