--- a/Dropseed.minions/Dropseed.minions.csproj
+++ b/Dropseed.minions/Dropseed.minions.csproj
@@ -90,7 +90,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="settings.json" />
+    <None Include="settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dropseed.minions.Api\Dropseed.minions.Api.csproj">
