Getting the App pool from IIS

--- a/Dropseed.minions.Test/Dropseed.minions.Test.csproj
+++ b/Dropseed.minions.Test/Dropseed.minions.Test.csproj
@@ -83,6 +83,7 @@
     <Compile Include="MinionSettingTests.cs" />
     <Compile Include="PingServiceShouldWorkTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Query\GetAppPoolTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
