--- a/Dropseed.minions.Api/packages.config
+++ b/Dropseed.minions.Api/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="System.Management.Automation.dll" version="10.0.10586.0" targetFramework="net452" />
 </packages>
